[package]
name = "gallery_accel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gallery_accel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "multipart"] }
blake3 = "1.5"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled", "collation", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time", "process", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
futures-util = "0.3"
http-body-util = "0.1"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2"
pinyin = "0.10"
uuid = { version = "1", features = ["v4"] }
regex = "1"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
# Official ONNX Runtime + OpenVINO EP (same stack as Python onnxruntime-openvino).
# load-dynamic: ship manylinux OpenVINO-enabled ORT + GPU plugin next to binary.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24", "openvino"] }

[dev-dependencies]
tempfile = "3.25"
